<resources>
    <string name="app_name">TiNimal</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="mail">Mail</string>
    <string name="address">Address</string>
    <string name="create">Create</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="tinimal">TiNimal</string>
    <string name="search_by_breed">Search by breed</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="show">Show</string>
    <string name="price">Price</string>
    <string name="tell_about_cat">Tell about cat…</string>
    <string name="sex">Sex</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="passport">Passport</string>
    <string name="vaccination">Vaccination</string>
    <string name="certificate">Certificate</string>
    <string name="invalid_input">Invalid input. Check that every field is filled in</string>
    <string name="password_reset">password reset</string>
    <string name="currency">$</string>
    <string name="rating">rating</string>
    <string name="reviews">feedback</string>
    <string name="mailText">Mail:</string>
    <string name="phoneText">Phone:</string>
    <string name="addressText">Address:</string>
    <string name="is_passport">Наличие паспорта</string>
    <string name="is_vaccination">Наличие прививок</string>
    <string name="is_certificate">Наличие справок</string>
    <string name="add_feedback">Оставить отзыв</string>
    <string name="add_a_pet_to_your_favorites">Add a pet to your favorites</string>
    <string name="dialog_text">This page is not yet available on the mobile app</string>
    <string name="dialog_header">Open Tinimal website</string>
    <string name="positive">Go</string>
    <string name="negative">Close</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Save">Сохранить</string>
    <string name="be_the_first_to_leave_feedback">Be the first to leave feedback!</string>
    <string name="name_cat">Name:</string>
    <string name="cat_created">Cat was created</string>
    <string name="cat_no_created">Cat wasn\'t created</string>
    <string name="cat_added_to_favorites">Cat added to you favourites</string>
    <string name="cat_deleted_from_favorites">Cat delete from you favourites</string>
    <string name="how_it_ended">How it ended?</string>
    <string name="rate_user">Rate user</string>
    <string name="passport_availability">Passport availability</string>
    <string name="vaccination_availability">Vaccination availability</string>
    <string name="certificate_availability">Certificate availability</string>
    <string name="user_info_update">User info was update</string>
    <string name="user_info_not_update">User info wasn\'t update. Retry later</string>
    <string name="cat_was_deleted">Cat was deleted</string>
    <string name="cat_was_updated">Cat was updated</string>
    <string name="cat_was_not_updated">Cat wasn\'t updated</string>
    <string name="error_try_again_later">Error, try again later.</string>
</resources>