<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchTitle"
        android:icon="@drawable/ic_bottom_search"
        android:enabled="true"
        android:title="@string/search" />

    <item
        android:id="@+id/favouritesTitle"
        android:icon="@drawable/ic_bottom_favourites"
        android:enabled="true"
        android:title="@string/favourites">

    </item>

    <item
        android:id="@+id/messageTitle"
        android:icon="@drawable/ic_bottom_message"
        android:enabled="true"
        android:title="@string/messages">

    </item>

    <item
        android:id="@+id/profileTitle"
        android:icon="@drawable/ic_bottom_profile"
        android:enabled="true"
        android:title="@string/profile">

    </item>
</menu>