<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical">

    <include layout="@layout/toolbar_profile" />

    <ImageView
        android:id="@+id/photoCatProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/cat_photo_example" />

    <TextView
        android:id="@+id/nameProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Джоржд" />

    <TextView
        android:id="@+id/breedProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Шотландский скоттиш-страйт" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/age"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/nameCatProfileFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            tools:text="4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/sex"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/sexImageView"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_male" />

    </LinearLayout>

    <TextView
        android:id="@+id/priceProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="2000$" />

    <TextView
        android:id="@+id/addressProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        tools:text="Республика Татарстан, Казань" />

    <TextView
        android:id="@+id/passportTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/passport"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/vaccinationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/vaccination"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/certificateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/certificate"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_frame_rectangle"
        android:padding="8dp"
        android:textColor="@color/black"
        tools:text="Kот кpупный, здopoвый, кpасивый, с прeкpacным хaрактepoм, что пеpедаётcя его потомcтву. Носитель мраморного гена по родословной." />
</LinearLayout>