<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/appBarInfo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow" />

    <EditText
        android:id="@+id/nameEditTextCatFormFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text_rectangle"
        android:hint="@string/name"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maleCheckBox" />

    <EditText
        android:id="@+id/breedEditTextCatFormFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text_rectangle"
        android:hint="@string/breed"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditTextCatFormFragment" />

    <EditText
        android:id="@+id/priceEditTextCatFormFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text_rectangle"
        android:hint="@string/price"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ageEditTextCatFormFragment" />

    <EditText
        android:id="@+id/ageEditTextCatFormFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text_rectangle"
        android:hint="@string/age"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breedEditTextCatFormFragment" />

    <CheckBox
        android:id="@+id/maleCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/checkbox_male_selector"
        android:button="@null"
        android:checked="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/femaleCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/checkbox_female_selector"
        android:button="@null"
        android:checked="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toBottomOf="@+id/maleCheckBox"
        app:layout_constraintStart_toEndOf="@+id/maleCheckBox"
        app:layout_constraintTop_toTopOf="@+id/maleCheckBox" />

    <TextView
        android:id="@+id/passportTextView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/maleCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/priceEditTextCatFormFragment"
        tools:text="Наличие паспорта" />

    <TextView
        android:id="@+id/vaccinationTextView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/passportTextView"
        app:layout_constraintTop_toBottomOf="@+id/passportTextView"
        tools:text="Наличие прививок" />

    <TextView
        android:id="@+id/certificatesTextView"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/vaccinationTextView"
        app:layout_constraintTop_toBottomOf="@+id/vaccinationTextView"
        tools:text="Наличие справок" />

    <CheckBox
        android:id="@+id/passportCheckBox"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passportTextView" />

    <CheckBox
        android:id="@+id/vaccinationCheckBox"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vaccinationTextView" />

    <CheckBox
        android:id="@+id/certificatesCheckBox"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/certificatesTextView" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarInfo"
        tools:src="@drawable/button_add_cat" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/custom_frame_rectangle"
        android:hint="@string/tell_about_cat"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/priceEditTextCatFormFragment"
        app:layout_constraintStart_toStartOf="@+id/certificatesTextView"
        app:layout_constraintTop_toBottomOf="@+id/certificatesTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>