<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBarInfo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow" />

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/cat_photo_example"
            app:layout_constraintTop_toBottomOf="@+id/appBarInfo" />

        <ImageButton
            android:id="@+id/removePhotoImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_plus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

        <ImageButton
            android:id="@+id/addPhotoImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="140dp"
            android:background="@color/transparent"
            android:src="@drawable/button_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

        <CheckBox
            android:id="@+id/maleCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/checkbox_male_selector"
            android:button="@null"
            android:checked="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/removePhotoImageButton" />

        <CheckBox
            android:id="@+id/femaleCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/checkbox_female_selector"
            android:button="@null"
            android:checked="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toBottomOf="@+id/maleCheckBox"
            app:layout_constraintStart_toEndOf="@+id/maleCheckBox"
            app:layout_constraintTop_toTopOf="@+id/maleCheckBox" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditTextCatFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text_rectangle"
            android:hint="@string/name"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maleCheckBox" />

        <EditText
            android:id="@+id/breedEditTextCatFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text_rectangle"
            android:hint="@string/breed"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditTextCatFormFragment" />

        <EditText
            android:id="@+id/priceEditTextCatFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text_rectangle"
            android:hint="@string/price"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ageEditTextCatFormFragment" />

        <EditText
            android:id="@+id/ageEditTextCatFormFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text_rectangle"
            android:hint="@string/age"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breedEditTextCatFormFragment" />

        <TextView
            android:id="@+id/passportTextView"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/maleCheckBox"
            app:layout_constraintTop_toBottomOf="@+id/priceEditTextCatFormFragment"
            tools:text="Наличие паспорта" />

        <TextView
            android:id="@+id/vaccinationTextView"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/passportTextView"
            app:layout_constraintTop_toBottomOf="@+id/passportTextView"
            tools:text="Наличие прививок" />

        <TextView
            android:id="@+id/certificatesTextView"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/vaccinationTextView"
            app:layout_constraintTop_toBottomOf="@+id/vaccinationTextView"
            tools:text="Наличие справок" />

        <CheckBox
            android:id="@+id/passportCheckBox"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/passportTextView" />

        <CheckBox
            android:id="@+id/vaccinationCheckBox"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vaccinationTextView" />

        <CheckBox
            android:id="@+id/certificatesCheckBox"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/certificatesTextView" />

        <EditText
            android:id="@+id/infoEditText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/custom_frame_rectangle"
            android:hint="@string/tell_about_cat"
            android:padding="8dp"
            android:textColorHint="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/priceEditTextCatFormFragment"
            app:layout_constraintStart_toStartOf="@+id/certificatesTextView"
            app:layout_constraintTop_toBottomOf="@+id/certificatesTextView" />


        <Button
            android:id="@+id/buttonDeleteContact"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textStyle="bold"
            app:cornerRadius="12dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoEditText"
            app:strokeColor="@color/hint_text_color"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            app:cornerRadius="12dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDeleteContact"
            app:strokeColor="@color/hint_text_color"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
